<resources>
    <string name="app_name">EcommerceApplication</string>
    <string name="first_slide">Choose Your Product</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide">Good Service</string>
    <string name="description">i am getting better and better everysingle day at coding.i am going to increase my logicaa thinking
    in order to solve the coding related logical problem very fast .God give me such a strength . i wanna be smart in this room</string>
    <string name="lets_get_started">Lets get started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detailed">DetailedActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_name">Product Name</string>
    <string name="_4_0">4.0</string>
    <string name="description_detail">one day i am gonna make a service based company to change i am the very very intelliegent and smart employee in the UItech company cosx i work my ass offf i love my coding skill i</string>
    <string name="price">Price</string>
    <string name="dollar">$</string>
    <string name="twenty">20</string>
    <string name="one">1</string>
    <string name="add_to_cat">Add To Cat</string>
    <string name="buy_now">Buy Now</string>
</resources>