<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailedActivity">


    <ImageView
        android:id="@+id/detailed_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailed_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Product Detailed">

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:translationY="-50dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detailed_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/amethysta"
                    android:text="@string/product_name"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amethysta"
                    android:text="@string/_4_0"
                    android:textSize="14sp">

                </TextView>

                <RatingBar
                    android:id="@+id/my_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1">

                </RatingBar>
            </LinearLayout>

            <TextView
                android:id="@+id/detailed_description_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/amethysta"
                android:text="@string/description_detail">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="@font/amethysta"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amethysta"
                    android:text="@string/dollar"
                    android:textColor="@color/purple_700" />

                <TextView
                    android:id="@+id/detailed_price_of_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amethysta"
                    android:text="@string/twenty"
                    android:textColor="@color/purple_700" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/add_item_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/circle_plus"
                    android:src="@drawable/ic_add"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/cont_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/one"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/remove_item_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_minus"
                    android:src="@drawable/ic_minus"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/add_to_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9100"
        android:drawableLeft="@drawable/ic_add_to_cart"
        android:padding="14dp"
        android:text="@string/add_to_cat"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintWidth_percent="0.6" />

    <Button
        android:id="@+id/buy_now_start"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9100"
        android:drawableLeft="@drawable/ic_buy_cart"
        android:padding="14dp"
        android:text="@string/buy_now"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/add_to_cart"
        app:layout_constraintStart_toStartOf="@+id/add_to_cart"
        app:layout_constraintTop_toBottomOf="@+id/add_to_cart"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintWidth_percent="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>